perf: 优化消息通知功能

--- a/okx-lib-framework/dispatcher/pom.xml
+++ b/okx-lib-framework/dispatcher/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>settings</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>ai.zzt.okx</groupId>
+            <artifactId>message</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
