--- a/okx-server-platform/web/pom.xml
+++ b/okx-server-platform/web/pom.xml
@@ -15,6 +15,11 @@
 
         <dependency>
             <groupId>ai.zzt.okx</groupId>
+            <artifactId>common-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ai.zzt.okx</groupId>
             <artifactId>emulator</artifactId>
         </dependency>
 
